--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <br>
     <p>Selected Word Count: <span id="selected-count"></span></p>
     <span id="bolded-passage"></span>
+    <span>Testing a push</span>
   </div>
 </body>
 </html>
